<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:id="@+id/search_fragment"
    tools:context="com.example.safwat.carstation.Fragment.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dailyback"
        android:scaleType="centerCrop"
        android:alpha="0.8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <!--date Container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="#2fff"
        android:layout_marginTop="16dp"
        android:id="@+id/search_view_for_daily_date"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_weight=".3">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="@color/colorPrimary"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".95"
                android:gravity="left|center_vertical"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:text="@string/date"
                />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:layout_gravity="left"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="16dp"
            android:id="@+id/search_view_text_date_daily"
            />
    </LinearLayout>


    <!--carName Container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="#2fff"
        android:layout_below="@+id/search_view_for_daily_date"
        android:layout_marginTop="16dp"
        android:id="@+id/carOwner_name"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_weight=".3">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="@color/colorPrimary"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".95"
                android:gravity="left|center_vertical"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:text="@string/car_name"
                />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:layout_gravity="left"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="16dp"
            android:id="@+id/carName"
            />
    </LinearLayout>


    <!--ListView Of Result Of Search-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/daily_details_RecycleViewList_daily"
        android:layout_marginTop="4dp"
        android:layout_below="@id/carOwner_name"
        android:layout_above="@+id/search_option_daily_button"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        />

    <!--SearchButton-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/search_option_daily_button"
        android:orientation="horizontal"
        android:background="@drawable/ripple_wrap_button"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:id="@+id/edit_daily_form"
            android:text="@string/search"
            android:textSize="28dp"
            android:padding="4dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/search_daily_progressContainer"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:id="@+id/daily_progressBar"
            />
    </LinearLayout>

</RelativeLayout>
