<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.example.safwat.carstation.Fragment.DailyCollected">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/collectmonycover"
        android:scaleType="centerCrop"
        android:alpha="0.8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        >
            <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

               <!--date part-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:background="#2fff"
                    android:layout_marginTop="16dp"
                    android:id="@+id/container_of_collected_daily"
                >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_weight=".3">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="@color/colorPrimary"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".95"
                android:gravity="left|center_vertical"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:text="@string/date"
                />
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:layout_gravity="left"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="16dp"
            android:id="@+id/date_of_collected_daily_textView"
            />
    </LinearLayout>

                <!--car container-->
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="?attr/actionBarSize"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:weightSum="1"-->
                    <!--android:background="#2fff"-->
                    <!--android:layout_below="@+id/container_of_collected_daily"-->
                    <!--android:layout_marginTop="16dp"-->
                    <!--android:id="@+id/collectedMony_car_name_of_daily"-->
                    <!--&gt;-->
                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:weightSum="1"-->
                        <!--android:layout_weight=".4">-->
                        <!--<View-->
                            <!--android:layout_width="0dp"-->
                            <!--android:layout_height="match_parent"-->
                            <!--android:layout_weight="0.05"-->
                            <!--android:background="@color/colorPrimary"-->
                            <!--/>-->
                        <!--<TextView-->
                            <!--android:layout_width="0dp"-->
                            <!--android:layout_height="match_parent"-->
                            <!--android:layout_weight=".95"-->
                            <!--android:gravity="left|center_vertical"-->
                            <!--android:textColor="#fff"-->
                            <!--android:textSize="18dp"-->
                            <!--android:textStyle="bold"-->
                            <!--android:layout_marginLeft="8dp"-->
                            <!--android:text="@string/car_name"-->
                            <!--android:layout_gravity="left"-->
                            <!--/>-->

                    <!--</LinearLayout>-->
                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_weight=".6"-->
                        <!--android:layout_gravity="left"-->
                        <!--android:gravity="center"-->
                        <!--android:textColor="#fff"-->
                        <!--android:textSize="16dp"-->
                        <!--android:id="@+id/collectedMony_car_name_text_daily"-->
                        <!--/>-->

                <!--</LinearLayout>-->
                <!--<ListView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/collectedMony_car_name_of_daily"-->
                    <!--android:id="@+id/list_view_of_collectedMoney_in_daily"-->
                    <!--android:scrollbars="none"-->
                    <!--/>-->

                <!-- shift part-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_below="@id/container_of_collected_daily"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:background="#2fff"
                    android:layout_marginTop="16dp"
                    android:id="@+id/shift_container_of_daily"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="1"
                        android:layout_weight=".3">
                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.05"
                            android:background="@color/colorPrimary"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".95"
                            android:gravity="left|center_vertical"
                            android:textColor="#fff"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="8dp"
                            android:text="@string/shift"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:textColor="#fff"
                        android:textSize="16dp"
                        android:id="@+id/shift_name_of_collected_daily"
                        />

                </LinearLayout>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shift_container_of_daily"
                    android:id="@+id/shift_list_in_collected_daily"
                    android:scrollbars="none"
                    android:layout_above="@+id/print_collected_daily"
                    />

    </RelativeLayout>
    </ScrollView>
    <!-- print part-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:id="@+id/print_collected_daily"
        android:background="@drawable/ripple_wrap_button"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/print"
            android:textSize="28dp"
            android:padding="4dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/daily_collected__progressContainer"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:id="@+id/daily_progressBar"
            />
    </LinearLayout>

</RelativeLayout>
